# janus-mobile-sdk

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  Dockerfile.janus  Makefile  README.md  docker-compose.yml  janus-client.djinni
docs/: README.md  _coverpage.md  _sidebar.md  create-application.md  custom.css  getting-started.md  index.html  messing-around.md
examples/android/: settings.gradle
examples/android/app/: build.gradle
examples/android/app/src/androidTest/java/com/github/helloiampau/app/: ApiTest.java  DatachannelTest.java  EchotestTest.java  StreamingTest.java  VideoroomTest.java
examples/android/app/src/main/: AndroidManifest.xml
examples/android/app/src/main/java/com/github/helloiampau/app/: Api.java  Datachannel.java  Echotest.java  JanusService.java  MainActivity.java  ServiceDelegate.java  Streaming.java  Videoroom.java
examples/android/app/src/main/java/com/github/helloiampau/app/custom/: CustomPlugin.java  CustomPluginFactory.java  CustomProtocol.java
examples/android/app/src/main/res/layout/: activity_main.xml  api.xml  datachannel.xml  echotest.xml  feed_item.xml  streaming.xml  videoroom.xml
examples/android/gradle/wrapper/: gradle-wrapper.properties
examples/ios/app/app/: AppDelegate.h  AppDelegate.m  SceneDelegate.h  ViewController.h  ViewController.m  main.m
examples/ios/app/app.xcodeproj/: project.pbxproj
examples/ios/app/app.xcodeproj/project.xcworkspace/xcuserdata/helloiampau.xcuserdatad/: UserInterfaceState.xcuserstate
examples/ios/app/appUITests/: appUITests.m
include/janus/: async.h  bundle_impl.h  constraints_builder_impl.h  http.h  janus_api.h  janus_event_impl.h  janus_impl.h  platform_impl.h  random.h  transport.h
include/janus/plugins/: janus_plugin.h  janus_plugin_echotest.h  janus_plugin_streaming.h  janus_plugin_videoroom.h
src/: async.cc  bundle_impl.cc  constraints_builder_impl.cc  http.cc  janus_api.cc  janus_event_impl.cc  janus_impl.cc  platform_impl.cc  random.cc  transport.cc
src/plugins/: janus_plugin.cc  janus_plugin_echotest.cc  janus_plugin_streaming.cc  janus_plugin_videoroom.cc
test/: async.test.cc  bundle_impl.test.cc  constraints_builder_impl.test.cc  http.test.cc  integration.test.cc  janus_api.test.cc  janus_event_impl.test.cc  janus_impl.test.cc  main.cc  platform_impl.test.cc  random.test.cc  transport.test.cc
test/mocks/: async.h  bundle.h  http.h  http_factory.h  janus_conf.h  matchers.h  peer.h  peer_factory.h  platform.h  plugin.h  plugin_command_delegate.h  protocol.h  protocol_delegate.h  random.h  transport.h  transport_delegate.h  transport_factory.h
test/plugins/: janus_plugin_echotest.test.cc  janus_plugin_streaming.test.cc  janus_plugin_videoroom.test.cc
